# DisprzTraining-main/DisprzTraining/Api/CalendarAPI_Spec.yml
@@ -129,42 +129,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
 
-  /v1/api/allappointments:
-    get:
-      summary: Fetch All Appointments with Date/Title with offset and fetchCount
-      operationId: getAllAppointments
-      tags:
-        - Appointments
-      parameters:
-        - name: offSet
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-        - name: fetchCount
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-        - name: searchDate
-          in: query
-          schema:
-            type: string
-            format: date-time
-        - name: searchTitle
-          in: query
-          schema:
-            type: string
-            format: string
-      responses:
-        "200":
-          description: Listed an Array of All Appointments
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/PaginatedAppointments"
+
 
 components:
   schemas:
@@ -191,33 +156,6 @@ components:
             type: string
             format: string
 
-    # List of Appointments
-    PaginatedAppointments:
-      properties:
-        isTruncated:
-          type: boolean
-          format: boolean
-        appointments:
-          type: array
-          items:
-            type: object
-            properties:
-              appointmentId:
-                type: string
-                format: uuid
-                example: "3fa85f64-5717-4562-b3fc-2c963f66afa6"
-              appointmentStartTime:
-                type: string
-                format: date-time
-              appointmentEndTime:
-                type: string
-                format: date-time
-              appointmentTitle:
-                type: string
-                format: string
-              appointmentDescription:
-                type: string
-                format: string
     # single appointment
     AppointmentDTO:
       type: object
